--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "discography-cli",
   "version": "0.0.1",
   "description": "CLI for discography module",
-  "bin": "dist/bin.js",
+  "bin": "dist/index.js",
   "scripts": {
-    "dev": "ts-node --files src/bin.tsx",
+    "dev": "ts-node --files src/index.tsx",
     "clean": "rimraf dist/*",
     "tsc": "tsc",
     "build": "run-s clean tsc",
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
@@ -47,6 +48,9 @@
   },
   "dependencies": {
     "ink": "^3.0.8",
-    "react": "^17.0.2"
+    "ink-select-input": "^4.2.0",
+    "ink-spinner": "^4.0.2",
+    "ink-text-input": "^4.0.1",
+    "react": "^16.8.0"
   }
 }
